VZDEV/src/objects/CCPM_NPS__c.object
<CustomObject>
    <description>This Object is to store Customer Survey&apos;s</description>
    <fields>
        <fullName>CCPM_AccountHolderName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Holder Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPS</relationshipLabel>
        <relationshipName>NPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_AccountNumber__c</fullName>
        <formula>CCPM_AccountHolderName__r.CCPM_accountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_Account_Date_Survey_Completed__c</fullName>
        <formula>CCPM_AccountHolderName__r.CCPM_NPSDateSurveyCompleted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Date Survey Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_Category__c</fullName>
        <formula>IF(CCPM_NPSScore__c&gt;8,&quot;Promoter&quot;,
IF(CCPM_NPSScore__c&gt;6,&quot;Passive&quot;, &quot;Detractor&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_NPSChannel__c</fullName>
        <label>NPS Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>Telesales</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Prepay</fullName>
                </value>
                <value>
                    <fullName>BGCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_NPSComments__c</fullName>
        <label>NPS Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_NPSScore__c</fullName>
        <label>NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_SurveyChannel__c</fullName>
        <formula>CASE(CCPM_NPSChannel__c,
&quot;Internet&quot;,&quot;Digital&quot;,
&quot;Customer Service&quot;,&quot;Care&quot;,
&quot;Financial Services&quot;,&quot;Care&quot;,
&quot;Prepay&quot;,&quot;Care&quot;,
&quot;Retail&quot;,&quot;Retail&quot;,
&quot;B2B&quot;,&quot;B2B&quot;,
&quot;Telesales&quot;,&quot;Telesales&quot;,
&quot;Internet&quot;,&quot;Digital&quot;,
&quot;BGCO&quot;,&quot;BGCO&quot;,
&quot;Other&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_dateSurveyCompleted__c</fullName>
        <label>Date Survey Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_surveyMobileNumber__c</fullName>
        <encrypted>true</encrypted>
        <label>Survey MTN</label>
        <type>Phone</type>
    </fields>
    <label>NPS</label>
    <listViews>
        <fullName>CCPM_AllSurveys</fullName>
        <columns>CCPM_AccountHolderName__c</columns>
        <columns>CCPM_AccountNumber__c</columns>
        <columns>NAME</columns>
        <columns>CCPM_dateSurveyCompleted__c</columns>
        <columns>CCPM_surveyMobileNumber__c</columns>
        <columns>CCPM_SurveyChannel__c</columns>
        <columns>CCPM_NPSScore__c</columns>
        <columns>CCPM_Category__c</columns>
        <columns>CCPM_NPSComments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Surveys</label>
    </listViews>
    <nameField>
        <label>Survey ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>